# idkit

./: .gitignore  CODEOWNERS  Cargo.toml  Cross.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.changeset/: README.md  eight-lamps-smile.md
.github/workflows/: _build-publish-js.yml  ci.yml  codeql.yml  initiate-release.yml  ios-platform-download-probe.yml  ios-platform-probe.yml  kotlin-aar-dry-run.yml  lint-pr.yml  publish-go-server.yml  publish-js.yml  publish-kotlin.yml  publish-react.yml  publish-rust.yml  publish-server.yml  publish-swift.yml  release-dev-js.yml  relyance-sci.yml
docs/: IMPLEMENTATION_SUMMARY.md  rp-signature.md
go/idkit/: README.md  go.mod  rust_parity_test.go  signing.go  signing_test.go  version.go
go/idkit-server/: README.md  go.mod  go.sum  signing.go  signing_test.go  version.go
js/: .prettierignore  package.json  pnpm-lock.yaml  vercel.json
js/examples/browser/: .env.example  README.md  index.html  legacy-cdn.html  package.json  session-cdn-4.0.html  vite.config.js
js/examples/browser/src/: server.ts
js/examples/nextjs/: .env.example  README.md  next.config.ts  package.json  tsconfig.json
js/examples/nextjs/app/: globals.css  layout.tsx  page.tsx  ui.tsx
js/examples/nextjs/app/api/arena/rp-context/: route.ts
js/examples/nextjs/app/api/error-cases/rp-context/: route.ts
js/examples/nextjs/app/api/rp-signature/: route.ts
js/examples/nextjs/app/api/verify-integrity-bundle/: route.ts
js/examples/nextjs/app/api/verify-proof/: route.ts
js/examples/nextjs/app/arena/: page.tsx  ui.tsx
js/examples/nextjs/app/debug-proof-request/: page.tsx  ui.tsx
js/examples/nextjs/app/error-cases/: page.tsx  ui.tsx
js/examples/nextjs/app/eruda/: eruda-provider.tsx  index.tsx
js/examples/nextjs/app/verify-proof/: page.tsx  ui.tsx
js/examples/nextjs/lib/: idkit.ts
js/examples/react-native/: .env.example  .gitignore  App.tsx  README.md  app.json  constants.ts  metro.config.js  package.json  styles.ts  tsconfig.json
js/examples/react-native/android/: settings.gradle
js/examples/react-native/android/app/: build.gradle
js/examples/react-native/android/app/src/main/: AndroidManifest.xml
js/examples/react-native/android/app/src/main/res/values/: strings.xml
js/examples/react-native/ios/: Podfile
js/examples/react-native/ios/IDKitHermesDemo/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
kotlin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/Examples/IDKitKmpSampleApp/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/Examples/IDKitKmpSampleApp/androidApp/: build.gradle.kts  proguard-rules.pro
kotlin/Examples/IDKitKmpSampleApp/androidApp/src/main/: AndroidManifest.xml
kotlin/Examples/IDKitKmpSampleApp/iosApp/: build-shared-framework.sh  project.yml
kotlin/Examples/IDKitKmpSampleApp/iosApp/IDKitKmpSampleApp/: ContentView.swift  IDKitKmpSampleApp.swift  Info.plist
kotlin/Examples/IDKitKmpSampleApp/shared/: build.gradle.kts
kotlin/Examples/IDKitSampleApp/: build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/Examples/IDKitSampleApp/app/: build.gradle.kts  proguard-rules.pro
kotlin/Examples/IDKitSampleApp/app/src/main/: AndroidManifest.xml
kotlin/Examples/IDKitSampleApp/app/src/main/res/values/: strings.xml
kotlin/bindings/: build.gradle.kts
kotlin/bindings/src/main/kotlin/com/worldcoin/idkit/: IdKit.kt  KotlinCompat.kt
kotlin/bindings/src/test/kotlin/com/worldcoin/idkit/: IDKitTests.kt
kotlin/examples/: VerifyExample.kt
kotlin/idkit/: build.gradle.kts
kotlin/idkit/src/androidMain/kotlin/com/worldcoin/idkit/internal/: IoDispatcher.android.kt  NativeBridge.android.kt
kotlin/idkit/src/commonMain/kotlin/com/worldcoin/idkit/: Config.kt  Constraints.kt  Errors.kt  IDKit.kt  Payload.kt  Presets.kt  Request.kt  Result.kt  Status.kt
kotlin/idkit/src/commonTest/kotlin/com/worldcoin/idkit/: NativeContractTests.kt  PollLoopTests.kt  ResultJsonTests.kt  SerializationTests.kt  StatusMappingTests.kt  TestFixtures.kt
kotlin/idkit/src/nativeInterop/cinterop/: idkit_kmp.def
kotlin/lib/: build.gradle.kts  consumer-rules.pro
kotlin/src/main/kotlin/uniffi/idkit/: idkit.kt
kotlin/src/main/kotlin/uniffi/idkit_core/: idkit_core.kt
partner-integration-test/: face-auth-examples.md
rust/core/: Cargo.toml
rust/core/src/: bridge.rs  constraints.rs  crypto.rs  error.rs  issuer_schema.rs  lib.rs  preset.rs  rp_signature.rs  session.rs  types.rs  verification.rs  wasm_bindings.rs
rust/core/src/protocol_types/: constraints.rs  mod.rs  primitives.rs  proof.rs  requests.rs
rust/kmp-ffi/: Cargo.toml
rust/kmp-ffi/include/: idkit_kmp.h
rust/kmp-ffi/src/: config.rs  envelope.rs  lib.rs  registry.rs
rust/kmp-ffi/tests/: ffi_contract.rs
rust/uniffi-bindgen-bin/: Cargo.toml
rust/uniffi-bindings/: Cargo.toml  build.rs
rust/uniffi-bindings/src/: idkit.udl  lib.rs
rust/wasm/: Cargo.toml  test-crypto.mjs
rust/wasm/src/: lib.rs
scripts/: archive-swift.sh  build-kotlin.sh  build-swift.sh  build-wasm.sh  package-kotlin.sh  package-swift.sh  publish-relocation-pom.sh  restore-idkit-swift.sh  setup-local-swift.sh
swift/: Package.resolved  Package.swift  README.md
swift/Examples/: BasicVerification.swift  VerifyExample.swift
swift/Examples/IDKitSampleApp/: README.md  project.yml
swift/Examples/IDKitSampleApp/IDKitSampleApp/: ContentView.swift  IDKitSampleAppApp.swift  Info.plist  QRCodeView.swift
swift/Examples/IDKitSampleApp/IDKitSampleApp.xcodeproj/: project.pbxproj
swift/Examples/IDKitSampleApp/IDKitSampleApp.xcodeproj/xcshareddata/xcschemes/: IDKitSampleApp.xcscheme
swift/Sources/IDKit/: Constraints+Extensions.swift  CredentialCategory.swift  CredentialType+Extensions.swift  IDKit.swift  IDKitRequest+Compatibility.swift  Request+Convenience.swift  Request+Extensions.swift  Session+Compatibility.swift  Session+Extensions.swift  VerificationLevel+Extensions.swift  idkit.swift  idkitFFI.h  idkit_core.swift
swift/Tests/IDKitTests/: IDKitTests.swift  README.md
(+11 files in other folders)
