[workspace]
resolver = "2"

members = [
    "rust/core",
    "rust/uniffi-bindings",
    "rust/uniffi-bindgen-bin",
    "rust/wasm",
]

[workspace.package]
version = "3.0.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/worldcoin/idkit"
authors = ["World Contributors"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
aes-gcm = "0.10"
getrandom = { version = "0.2", features = ["js"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Encoding
base64 = "0.22"
hex = "0.4"

# Async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.10", default-features = false, features = ["serde"] }

# URL handling
url = "2.5"
urlencoding = "2.1"

# Solidity ABI types
alloy-sol-types = "0.8.0"
ruint = "1.11.1"

# UniFFI
uniffi = "0.30"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Crypto", "SubtleCrypto"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
