[workspace]
resolver = "2"

members = [
    "rust/core",
    "rust/uniffi-bindgen-bin",
]

[workspace.package]
# Rust workspace version is managed independently from SDK initiate-release workflow bumps.
version = "4.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/worldcoin/idkit"
authors = ["World Contributors"]

[workspace.dependencies]
# World ID protocol types
world-id-primitives = { version = "0.5.1", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Enum utilities
strum = { version = "0.27", features = ["derive"] }

# Cryptography
aes-gcm = "0.10"
getrandom = { version = "0.2", features = ["js"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Encoding
base64 = "0.22"
hex = "0.4"

# Async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date/time
time = { version = "0.3", features = ["formatting"] }

# UUID
uuid = { version = "1.10", default-features = false, features = ["serde"] }

# URL handling
url = "2.5"
urlencoding = "2.1"

# Solidity ABI types
alloy = { version = "1.7.3", default-features = false, features = ["signer-local", "sol-types"] }
alloy-sol-types = "0.8.0"
alloy-primitives = "1.5.7"
ruint = "1.11.1"

# OPRF types
taceo-oprf = { version = "0.7", default-features = false, features = ["types"] }

# UniFFI
uniffi = "0.30"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Crypto", "SubtleCrypto"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.android-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
