[package]
name = "idkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core Rust implementation of IDKit - World ID SDK for Relying Parties"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
aes-gcm = { workspace = true, optional = true }
getrandom = { workspace = true }
tiny-keccak = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
alloy-sol-types = { workspace = true }
ruint = { workspace = true }
uniffi = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
urlencoding = { workspace = true, optional = true }

# Platform-specific HTTP client
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["json", "rustls-tls"], optional = true }
tokio = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { workspace = true, features = ["json"], optional = true }

[features]
default = ["native-crypto", "bridge", "verification"]

# Cryptography implementations
native-crypto = ["aes-gcm"]  # AES-256-GCM encryption for native platforms
wasm-crypto = ["aes-gcm"]    # AES-256-GCM encryption for WebAssembly

# Language bindings
uniffi-bindings = ["uniffi"]  # Enable UniFFI scaffolding for Swift/Kotlin bindings

# Protocol features
bridge = ["uuid/v4", "reqwest", "dep:tokio", "dep:urlencoding"]   # Bridge client and session management for verifications
bridge-wasm = ["uuid/js", "reqwest", "dep:urlencoding"]           # Bridge for WASM (no tokio)
verification = ["reqwest", "dep:tokio"]                            # Backend proof verification via Developer Portal API
