[package]
name = "idkit-uniffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "UniFFI bindings for IDKit - generates native Swift and Kotlin bindings"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "idkit"

[dependencies]
idkit-core = { path = "../core", default-features = false, features = ["uniffi-bindings", "native-crypto"] }
uniffi = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
